yaml/guestbook-service.yml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30036
  selector:
    app: guestbook
