yaml/redis-slave-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
    role: slave
