yaml/guestbook-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-host-ingress
spec:
  rules:
    - host: guestbook.com
      http:
        paths:
          - backend:
              serviceName: guestbook
              servicePort: 3000
